Java21 (#88)
* compiling works under java21

* mvn clean compile test now working under java21

* mvn clean test working, cleaned up xml processing to get rid of false negatives

* updated all the dependencies

* get mvn site to run

* reformat parent pom

* update javadocs to not have any errors so that the javadoc plugin without the doclet will work

* add signing keys to GitHub

* move the key import to after environment setup

* update a cpo-jdbc reference from 5.2.2 to 6.0.0

* add scope import to the testcontainers bom dependency